fix: added line-height to make the copy more readable

--- a/css/index.scss
+++ b/css/index.scss
@@ -143,6 +143,7 @@ section{
 
         & p{
             margin-bottom: 1rem;
+            line-height: 1.5
         }
 
         & .euro{
